@@ -1,7 +1,18 @@
 package xiaozhi.modules.sys.service.impl;
 
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
+
+import lombok.AllArgsConstructor;
 import xiaozhi.common.constant.Constant;
 import xiaozhi.common.exception.ErrorCode;
 import xiaozhi.common.exception.RenException;
@@ -14,14 +25,6 @@ import xiaozhi.modules.sys.dto.SysParamsDTO;
 import xiaozhi.modules.sys.entity.SysParamsEntity;
 import xiaozhi.modules.sys.redis.SysParamsRedis;
 import xiaozhi.modules.sys.service.SysParamsService;
-import lombok.AllArgsConstructor;
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
 
 /**
  * 参数管理
@@ -34,9 +37,8 @@ public class SysParamsServiceImpl extends BaseServiceImpl<SysParamsDao, SysParam
     @Override
     public PageData<SysParamsDTO> page(Map<String, Object> params) {
         IPage<SysParamsEntity> page = baseDao.selectPage(
-                getPage(params, Constant.CREATE_DATE, false),
-                getWrapper(params)
-        );
+                getPage(params, null, false),
+                getWrapper(params));
 
         return getPageData(page, SysParamsDTO.class);
     }
@@ -68,6 +70,8 @@ public class SysParamsServiceImpl extends BaseServiceImpl<SysParamsDao, SysParam
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void save(SysParamsDTO dto) {
+        validateParamValue(dto);
+
         SysParamsEntity entity = ConvertUtils.sourceToTarget(dto, SysParamsEntity.class);
         insert(entity);
 
@@ -77,44 +81,101 @@ public class SysParamsServiceImpl extends BaseServiceImpl<SysParamsDao, SysParam
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void update(SysParamsDTO dto) {
+        validateParamValue(dto);
+
         SysParamsEntity entity = ConvertUtils.sourceToTarget(dto, SysParamsEntity.class);
         updateById(entity);
 
         sysParamsRedis.set(entity.getParamCode(), entity.getParamValue());
     }
 
+    /**
+     * 校验参数值类型
+     */
+    private void validateParamValue(SysParamsDTO dto) {
+        if (dto == null) {
+            throw new RenException(ErrorCode.PARAM_VALUE_NULL);
+        }
+
+        if (StringUtils.isBlank(dto.getParamValue())) {
+            throw new RenException(ErrorCode.PARAM_VALUE_NULL);
+        }
+
+        if (StringUtils.isBlank(dto.getValueType())) {
+            throw new RenException(ErrorCode.PARAM_TYPE_NULL);
+        }
+
+        String valueType = dto.getValueType().toLowerCase();
+        String paramValue = dto.getParamValue();
+
+        switch (valueType) {
+            case "string":
+                break;
+            case "array":
+                break;
+            case "number":
+                try {
+                    Double.parseDouble(paramValue);
+                } catch (NumberFormatException e) {
+                    throw new RenException(ErrorCode.PARAM_NUMBER_INVALID);
+                }
+                break;
+            case "boolean":
+                if (!"true".equalsIgnoreCase(paramValue) && !"false".equalsIgnoreCase(paramValue)) {
+                    throw new RenException(ErrorCode.PARAM_BOOLEAN_INVALID);
+                }
+                break;
+            case "json":
+                try {
+                    JsonUtils.parseObject(paramValue, Object.class);
+                } catch (Exception e) {
+                    throw new RenException(ErrorCode.PARAM_JSON_INVALID);
+                }
+                break;
+            default:
+                throw new RenException(ErrorCode.PARAM_TYPE_INVALID);
+        }
+    }
+
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void delete(Long[] ids) {
-        //删除Redis数据
+    public void delete(String[] ids) {
+        // 删除Redis数据
         List<String> paramCodeList = baseDao.getParamCodeList(ids);
         String[] paramCodes = paramCodeList.toArray(new String[paramCodeList.size()]);
-        sysParamsRedis.delete(paramCodes);
+        if (paramCodes.length > 0) {
+            sysParamsRedis.delete(paramCodes);
+        }
 
-        //删除
+        // 删除
         deleteBatchIds(Arrays.asList(ids));
     }
 
     @Override
-    public String getValue(String paramCode) {
-        String paramValue = sysParamsRedis.get(paramCode);
-        if (paramValue == null) {
-            paramValue = baseDao.getValueByCode(paramCode);
+    public String getValue(String paramCode, Boolean fromCache) {
+        String paramValue = null;
+        if (fromCache) {
+            paramValue = sysParamsRedis.get(paramCode);
+            if (paramValue == null) {
+                paramValue = baseDao.getValueByCode(paramCode);
 
-            sysParamsRedis.set(paramCode, paramValue);
+                sysParamsRedis.set(paramCode, paramValue);
+            }
+        } else {
+            paramValue = baseDao.getValueByCode(paramCode);
         }
         return paramValue;
     }
 
     @Override
     public <T> T getValueObject(String paramCode, Class<T> clazz) {
-        String paramValue = getValue(paramCode);
+        String paramValue = getValue(paramCode, true);
         if (StringUtils.isNotBlank(paramValue)) {
             return JsonUtils.parseObject(paramValue, clazz);
         }
 
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RenException(ErrorCode.PARAMS_GET_ERROR);
         }
@@ -128,4 +189,13 @@ public class SysParamsServiceImpl extends BaseServiceImpl<SysParamsDao, SysParam
         return count;
     }
 
+    @Override
+    public void initServerSecret() {
+        // 获取服务器密钥
+        String secretParam = getValue(Constant.SERVER_SECRET, false);
+        if (StringUtils.isBlank(secretParam) || "null".equals(secretParam)) {
+            String newSecret = UUID.randomUUID().toString();
+            updateValueByCode(Constant.SERVER_SECRET, newSecret);
+        }
+    }
 }
